fixed photo alignment, added next button and the result page.

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <link rel="shortcut icon" type="image/png" href="assets/images/mac12.png" />
     <title>Vanilla JS</title>
     <!-- Bootstrap CDN -->
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
+    <!-- <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"> -->
 
     <!-- Linking CSS -->
     <link rel="stylesheet" type="text/css" href="assets/css/reset.css">
@@ -23,6 +23,8 @@
     <!-- Linking jQuery -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.0/jquery.min.js"></script>
     <script src="assets/javascript/circletype.min.js"></script>
+    <script src="assets/javascript/jquery.fittext.js"></script>
+
     <!-- Linking jQuery UI-->
     <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
 
@@ -46,20 +48,21 @@
 
             <p>Vanilla JS is a fast, lightweight, cross-platform framework for building incredible, powerful JavaScript applications.</p>
             <button class="flex-container" id="startbtn">START</button>
-            <div class="flex-container" id="quizbox">
-                <div class="qustion"><span id="qustion"></span></div>
+            <div class="flex-container" id="quizbox" style="display:none;">
+                <div class="qustion"><span id="question"></span></div>
                 <label class="opt"><input type="radio" name="option" value="1"> <span id="opt1"></span></label>
                 <label class="opt"><input type="radio" name="option" value="2"> <span id="opt2"></span></label>
                 <label class="opt"><input type="radio" name="option" value="3"> <span id="opt3"></span></label>
                 <label class="opt"><input type="radio" name="option" value="4"> <span id="opt4"></span></label>
-                <button id="nextbtn" class="nextbtn">NEXT</button>
+                <br>
+                <button id="nextbtn" class="nextbtn" style="display:none;">NEXT</button>
             </div>
-            <div id="result" class="container result" style="display:none;"></div>
+            <div id="result" class="container result" style="display:none;">YOUR SCORE:<span id="score"></span></div>
         </div>
     </div>
 
     <!-- Linking JavaScript file -->
-    <script type="text/javascript " src="assets/javascript/app.js "></script>
+    <script type="text/javascript " src="assets/javascript/app.js"></script>
 </body>
 
 </html>
