--- a/index.html
+++ b/index.html
@@ -38,7 +38,8 @@
             <div class="curved">
                 <span id="arc">Is Vanilla JS worth learning?</span>
                 <div id="icecream">
-                    <img class="icecream" src="assets/images/vanilla2.png"></div>
+                    <img class="icecream" src="assets/images/vanilla2.png">
+                </div>
 
             </div>
 
@@ -48,6 +49,7 @@
 
             <p>Vanilla JS is a fast, lightweight, cross-platform framework for building incredible, powerful JavaScript applications.</p>
             <button class="flex-container" id="startbtn">START</button>
+            <div id="countdown" style="display:none;"></div>
             <div class="flex-container" id="quizbox" style="display:none;">
                 <div class="qustion"><span id="question"></span></div>
                 <label class="opt"><input type="radio" name="option" value="1"> <span id="opt1"></span></label>
