--- a/index.html
+++ b/index.html
@@ -62,14 +62,8 @@
             </div>
             <div id="result" class="container result" style="display:none;">YOUR SCORE:<span id="score"></span></div>
         </div>
-        <div id="popup1" class="overlay" style="display:none;">
-            <div class="popup">
-                <h2>Times up!</h2>
-                <a class="close" href="#">&times;</a>
-                <div class="content">
-                    Times up.
-                </div>
-            </div>
+        <div class="mask">
+            <div id="timeup">Time is up!</div>
         </div>
     </div>
 
