add Window.matchMedia in .js file to replace img on resize event

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <meta property="og:description" content="Vanilla JS Trivial Trivia!">
     <meta property="og:image" content="assets/images/mac12.png">
     <meta property="og:url" content="https://sonmic.github.io/TriviaGame/">
-    <link rel="shortcut icon" type="image/png" href="assets/images/mac12.png" />
+    <link rel="shortcut icon" type="image/png" href="assets/images/vanilla1.png" />
     <title>Vanilla JS</title>
     <!-- Bootstrap CDN -->
     <!-- <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"> -->
@@ -38,9 +38,7 @@
         <div class="left">
             <div class="curved">
                 <span id="arc">Is Vanilla JS worth learning?</span>
-                <div id="icecream">
-                    <img class="icecream" src="assets/images/vanilla2.png">
-                </div>
+                <div id="icecream"></div>
 
             </div>
 
