testing resize event

--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta property="og:title" content="Vanilla JS Trivial Trivia!">
     <meta property="og:description" content="Vanilla JS Trivial Trivia!">
-    <meta property="og:image" content="assets/images/mac12.png">
+    <meta property="og:image" content="assets/images/vanilla5.png">
     <meta property="og:url" content="https://sonmic.github.io/TriviaGame/">
-    <link rel="shortcut icon" type="image/png" href="assets/images/vanilla1.png" />
+    <link rel="shortcut icon" type="image/png" href="assets/images/vanilla5.png" />
     <title>Vanilla JS</title>
     <!-- Bootstrap CDN -->
     <!-- <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"> -->
