added on hover effect on buttons

--- a/index.html
+++ b/index.html
@@ -47,7 +47,8 @@
                 <p>Vanilla JS is a fast, lightweight, cross-platform framework for building incredible, powerful JavaScript applications.</p>
                 <p>Ready to take a Vanilla JS quiz?</p>
             </div>
-            <button class="flex-container" id="startbtn">START</button>
+            <div id="startbtn" class="btn">START</div>
+
             <div id="countdown" style="display:none;"></div>
             <div class="flex-container" id="quizbox" style="display:none;">
                 <div class="question"><span id="question"></span></div>
@@ -58,7 +59,7 @@
                 <label class="opt"><input type="radio" name="option" value="3"> <span id="opt3"></span></label>
                 <label class="opt"><input type="radio" name="option" value="4"> <span id="opt4"></span></label>
                 <br>
-                <button id="nextbtn" class="nextbtn" style="display:none;">NEXT</button>
+                <div id="nextbtn" class="btn" style="display:none;">NEXT</div>
             </div>
             <div id="result" class="container result" style="display:none;">YOUR SCORE: <span id="score"></span></div>
         </div>
