changed start button UI

--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
             </div>
         </div>
     </div>
-
+    <span id="circle" class="circle"></span>
     <!-- Linking JavaScript file -->
     <script type="text/javascript " src="assets/javascript/app.js"></script>
 </body>
